--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "lsc --const server.ls",
+    "start-dev": "node-dev server.ls | gulp"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +17,8 @@
     "gulp-livereload": "^3.8.1",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
-    "gulp-stylus": "^2.3.1"
+    "gulp-stylus": "^2.3.1",
+    "livescript": "^1.5.0",
+    "node-dev": "^3.1.1"
   }
 }
